--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,74 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav {
+  margin: 0;
+  padding: 0 15px;
+  display: flex;
+  justify-content: space-between;
+  background-color: orange;
+  color: white;
+}
+
+.flex {
+  display: flex;
+}
+
+.link-div {
+  margin: 20px 0;
+}
+
+.link {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 0 5px;
+  cursor: pointer;
+}
+
+.container {
+  margin: 5px;
+  padding: 15px;
+  justify-content: space-around;
+}
+
+.product-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.product-card {
+  width: 30%;
+  margin-bottom: 20px;
+  border: 1px solid black;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.product-card img {
+  width: 220px;
+  height: 300px;
+}
+
+.product-card h3 {
+  font-size: 1rem;
+  margin-top: 10px;
+  overflow: hidden;
+}
+
+.product-card p {
+  font-size: 1rem;
+  margin-top: 5px;
+}
+
+.product-card button {
+  width: 100%;
+  background-color: green;
+  border: none;
+  border-radius: 3px;
+  color: white;
+  height: 30px;
 }
